--- a/ethics/web.config
+++ b/ethics/web.config
@@ -13,7 +13,7 @@
             <rules>
                 <!-- Rules for Get Users -->
                 <rule name="Get Users" stopProcessing="true">
-                    <match url="^apiendpoint/?$" ignoreCase="true" />
+                    <match url="^ethics/apiendpoint/?$" ignoreCase="true" />
                     <action type="Rewrite" url="/apiendpoint.php"  />
                 </rule>
                 <rule name="Get a User" stopProcessing="true">
