--- a/ethics/web.config
+++ b/ethics/web.config
@@ -14,17 +14,17 @@
                 <!-- Rules for Get Users -->
                 <rule name="Get Users" stopProcessing="true">
                     <match url="^ethics/apiendpoint/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="/apiendpoint.php"  />
+                    <action type="Rewrite" url="/apiendpoint.php/student"  />
                 </rule>
                 <rule name="Get a User" stopProcessing="true">
                     <match url="^apiendpoint/([a-zA-Z0-9-]+)/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="/apiendpoint.php?users={R:1}"  />
+                    <action type="Rewrite" url="/apiendpoint.php/student?users={R:1}"  />
                 </rule>
 
                 <!-- Rule to Insert Users -->
                 <rule name="Insert Users" stopProcessing="true">
                     <match url="^apiendpoint/([?_.a-zA-Z0-9-]+)/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="/apiendpoint.php?firstname={R:1}&amp;lastname={R:2}&amp;userid={R:3}&amp;email={R:4}&amp;role={R:5}&amp;password={R:6}"  />
+                    <action type="Rewrite" url="/apiendpoint.php/student?firstname={R:1}&amp;lastname={R:2}&amp;userid={R:3}&amp;email={R:4}&amp;role={R:5}&amp;password={R:6}"  />
                 </rule>
 
 
