--- a/ethics/web.config
+++ b/ethics/web.config
@@ -17,14 +17,14 @@
                     <action type="Rewrite" url="/apiendpoint.php/student"  />
                 </rule>
                 <rule name="Get a User" stopProcessing="true">
-                    <match url="^apiendpoint/([a-zA-Z0-9-]+)/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="/apiendpoint.php/student?users={R:1}"  />
+                    <match url="^ethics/apiendpoint/([a-zA-Z0-9-]+)/?$" ignoreCase="true" />
+                    <action type="Rewrite" url="ethics/apiendpoint.php/student?users={R:1}"  />
                 </rule>
 
                 <!-- Rule to Insert Users -->
                 <rule name="Insert Users" stopProcessing="true">
-                    <match url="^apiendpoint/([?_.a-zA-Z0-9-]+)/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="/apiendpoint.php/student?firstname={R:1}&amp;lastname={R:2}&amp;userid={R:3}&amp;email={R:4}&amp;role={R:5}&amp;password={R:6}"  />
+                    <match url="^ethics/apiendpoint/([?_.a-zA-Z0-9-]+)/?$" ignoreCase="true" />
+                    <action type="Rewrite" url="ethics/apiendpoint.php/student?firstname={R:1}&amp;lastname={R:2}&amp;userid={R:3}&amp;email={R:4}&amp;role={R:5}&amp;password={R:6}"  />
                 </rule>
 
 
