http verbs enabled

--- a/ethics/web.config
+++ b/ethics/web.config
@@ -1,34 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <system.webServer>
-        <directoryBrowse enabled="false" />
-        <defaultDocument>
-            <files>
-                <clear />
-                <add value="index.php" />
-                <add value="index.html" />
-            </files>
-        </defaultDocument>
-        <rewrite>
-            <rules>
-                <!-- Rules for Get Users -->
-                <rule name="Get Users" stopProcessing="true">
-                    <match url="^ethics/apiendpoint/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="/apiendpoint.php/student"  />
-                </rule>
-                <rule name="Get a User" stopProcessing="true">
-                    <match url="^ethics/apiendpoint/([a-zA-Z0-9-]+)/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="ethics/apiendpoint.php/student?users={R:1}"  />
-                </rule>
-
-                <!-- Rule to Insert Users -->
-                <rule name="Insert Users" stopProcessing="true">
-                    <match url="^ethics/apiendpoint/([?_.a-zA-Z0-9-]+)/?$" ignoreCase="true" />
-                    <action type="Rewrite" url="ethics/apiendpoint.php/student?firstname={R:1}&amp;lastname={R:2}&amp;userid={R:3}&amp;email={R:4}&amp;role={R:5}&amp;password={R:6}"  />
-                </rule>
-
-
-            </rules>
-        </rewrite>
+          <handlers>
+             <remove name="PHP53_via_FastCGI" />
+             <add name="PHP53_via_FastCGI" path="*.php" verb="GET,PUT,POST,DELETE,HEAD,OPTIONS,TRACE,PROPFIND,PROPPATCH,MKCOL,COPY,MOVE,LOCK,UNLOCK" modules="FastCgiModule" scriptProcessor="D:\Program Files (x86)\PHP\v5.3\php-cgi.exe" resourceType="Either" requireAccess="Script" />
+       </handlers>
     </system.webServer>
 </configuration>
